# kunpeng_ai

./: .gitignore  CMakeLists.txt  README.md  gameclient.sh  tags  upload_zip.sh
doc/: 2019华为云鲲鹏开发者大赛·决赛试题文档.docx  strategy.md
include/: action_avoid_enemy.h  action_eat_enemy.h  action_eat_power.h  action_explore_map.h  action_out_vision.h  action_remove_invalid.h  action_run_away.h  action_search_enemy.h  agent.h  assign_task.h  customAction.h  customCondition.h  game.h  make_decision.h  player.h  predict_enemy.h  util.h  xml_tree.h
python_demo/: attack_game.py  map_info.py  test.py
src/: action_avoid_enemy.cpp  action_eat_enemy.cpp  action_eat_power.cpp  action_explore_map.cpp  action_out_vision.cpp  action_remove_invalid.cpp  action_run_away.cpp  action_search_enemy.cpp  agent.cpp  assign_task.cpp  customAction.cpp  game.cpp  main.cpp  make_decision.cpp  parse_message.cpp  player.cpp  predict_enemy.cpp
test/: CMakeLists.txt  test.cpp
test/include/: data.h
tests/: CMakeLists.txt  test.cpp
tests/include/: data.h
xml/: Groot  version_0728.xml  version_0811.xml
