cmake_minimum_required(VERSION 2.8)
project(ai_yang)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
if(MSVC)
    add_definitions(-D_CRT_SECURE_NO_WARNINGS)
endif()
#SET(CMAKE_BUILD_TYPE "release")
#SET(CMAKE_BUILD_TYPE "debug")
#SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g2 -ggdb")
#if (CMAKE_BUILD_TYPE STREQUAL debug)
#    add_definitions(-D_DEBUG)
#endif ()
find_package(Threads REQUIRED)
include_directories(include 3rdparty/cJSON 3rdparty/BehaviorTree/include 3rdparty/OSSocket 3rdparty/log)
add_subdirectory(3rdparty)
#add_subdirectory(tests)
aux_source_directory(src src_dir)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin)
add_executable(${PROJECT_NAME} ${src_dir})
target_link_libraries(${PROJECT_NAME} OSSocket cJSON BehaviorTree log)
